--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,19 @@
 body {
     margin: 0;
-    font-family:
-        -apple-system,
-        BlinkMacSystemFont,
-        'Segoe UI',
-        'Roboto',
-        'Oxygen',
-        'Ubuntu',
-        'Cantarell',
-        'Fira Sans',
-        'Droid Sans',
-        'Helvetica Neue',
-        sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-    font-family:
-        'source-code-pro',
-        'Menlo',
-        'Monaco',
-        'Consolas',
-        'Courier New',
+    font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
         monospace;
 }
 
 .menu {
-    font-size: calc(10px + 2vmin);   
+    font-size: calc(10px + 2vmin);
 }
 .logo {
     color: rgb(0 0 0 / 100%);
